<resources>
    <string name="app_name">Win Rideshare</string>
    <string name="welcome">Descarga, Comparte y Gana.</string>
    <string name="welcom_btn">Empecemos</string>
    <string name="app_title">Win Rideshare</string>
    <string name="login_email">Ingrese su Correo</string>
    <string name="login_Password">Contraseña</string>
    <string name="login_btn">Iniciar sesión</string>
    <string name="help">¿Necesitas Ayuda?</string>
    <string name="forgot_pass_btn">¿Olvidó la contraseña?</string>
    <string name="new_user_btn">¿Usuario nuevo?</string>
    <string name="req_pass_btn">Solicitud de clave</string>
    <string name="register_btn">Registro</string>
    <string name="forgot_txt_note">Por favor ingrese el correo para recibir la clave</string>
    <string name="first_name">Nombres</string>
    <string name="username" >Crea tu Usuario</string>
    <string name="last_Name">Apellidos</string>
    <string name="your_password">Ingresa tu contraseña</string>
    <string name="login_Password4">Ingresa Código Correo:</string>
    <string name="login_Password8">Ingresa Código WhatsApp:</string>
    <string name="your_email">Tu correo</string>
    <string name="phn_no">Número de Celular</string>
    <string name="txt_select_country">Selecciona País</string>
    <string name="txt_select_currency">Selecciona moneda</string>
    <string name="login_cancelled">inicio de sesión cancelado</string>
    <string name="login_failed">inicio de sesión fallido</string>
    <string name="btn_edit">EDITAR</string>
    <string name="btn_save">GUARDAR</string>
    <string name="dialog_exit_caps">SALIR</string>
    <string name="dialog_exit_text">Estas seguro ?</string>
    <string name="txt_current_loc">Añadir parada</string>
    <string name="txt_pickup_loc">Configurar ubicación de recogida</string>
    <string name="txt_set_drop_loc">Estableces ubicación de llegada</string>
    <string name="txt_drop_loc">Ubicación de llegada</string>
    <string name="txt_types_title">Carros disponibles</string>
    <string name="txt_types_payment">Efectivo</string>
    <string name="txt_driver">Conductor</string>
    <string name="total_fare">TARIFA ESTIMADA</string>
    <string name="trip_summary">RESÚMEN DEL VIAJE</string>
    <string name="rate_ride">CALIFICA TU VIAJE</string>
    <string name="support">Soporte</string>
    <string name="my_calculator">Mi Calculadora</string>
    <string name="my_social_network">Mi Red Social</string>
    <string name="panic_contact">Contacto de pánico</string>
    <string name="txt_male">Masculino</string>
    <string name="txt_male_rbutton" translatable="false">male</string>
    <string name="txt_female">Femenino</string>
    <string name="txt_female_rbutton" translatable="false">female</string>
    <string name="txt_select_time">Seleccionar fecha y hora</string>
    <string name="dialog_no_internet">No hay Internet</string>
    <string name="no_internet">Internet no disponible</string>
    <string name="dialog_no_inter_message">Tu no tienes una conexión de internet activa.</string>
    <string name="dialog_enable_3g">Activar 3G</string>
    <string name="dialog_enable_wifi">Activar WIFI</string>
    <string name="dialog_exit">Salir</string>
    <string name="txt_mobile_error">Por favor ingrese su número celular!</string>
    <string name="txt_fname_error">Por favor ingrese su nombre!</string>
    <string name="txt_lname_error">Por favor ingrese su apellido!</string>
    <string name="txt_incorrect_error">Correo incorrecto!</string>
    <string name="txt_picture_error">Por favor seleccionar su imagen de perfil!</string>
    <string name="txt_phone_error">Por favor ingrese su número de teléfono!</string>
    <string name="txt_pass8_error">La contraseña debe ser de almenos 8 caracteres!</string>
    <string name="txt_email_error">¡Por favor ingrese su correo!</string>
    <string name="txt_email_error1">Ingrese un prefijo de pais valido</string>
    <string name="txt_email_error2">El correo debe estar lleno</string>
    <string name="txt_email_error3">Verifique un correo valido</string>
    <string name="txt_email_error4">Ingrese el numero de Celular valido</string>
    <string name="txt_email_error7">Debe ingresar un referido valido</string>
    <string name="txt_email_error8">Debe ingresar un usuario valido</string>
    <string name="txt_email_error9">Debe ingresar los nombres validos</string>
    <string name="txt_email_error10">Debe ingresar una contraseña valida</string>
    <string name="txt_email_error11">Error Correo ya Actualizado</string>
    <string name="actualiza">Verificar Correo</string>
    <string name="txt_email_error5">Debe contener 10 digitos</string>
    <string name="txt_email_error6">Debe ingresar una cedula valida</string>
    <string name="txt_pass_error">¡Por favor ingrese su contraseña!</string>
    <string name="txt_drivers_error">¡No hay conductores disponibles en este tipo de servicio!</string>
    <string name="txt_load">Cargando...</string>
    <string name="txt_confirm">Confirmando...</string>
    <string name="txt_signin">Iniciando sesión...</string>
    <string name="reg_load">Registrando...</string>
    <string name="updating_pro_load">Actualizando perfil...</string>
    <string name="req_pass_load">Solicitando contraseña...</string>
    <string name="my_home">Inicio</string>
    <string name="my_payment">Añadir opciones de pago</string>
    <string name="nikola_wallet">Billetera</string>
    <string name="my_free_ride">Viajes gratis</string>
    <string name="ask_bot">Preguntar al robot</string>
    <string name="ride_history">Historial de viajes</string>
    <string name="my_promo">Promociones</string>
    <string name="later_rides">Tus viajes programados</string>
    <string name="my_help">Autogestion Win</string>
    <string name="txt_logout">Cerrar sesión</string>
    <string name="drawer_open">abrir</string>
    <string name="drawer_close">cerrar</string>
    <string name="logout_text">¿Está seguro de cerrar sesión?</string>
    <string name="txt_gmail">Conectando a Gmail!</string>
    <string name="update_success_text">Perfil actualizado con éxito</string>
    <string-array name="language">
        <item>Seleccionar lenguaje</item>
        <item>Español(es)</item>
		<item>Inglés(en)</item>
    </string-array>
    <string-array name="currency">
        <item>USD</item>
    </string-array>
    <string name="facebook_api_id">1282522678496595</string>
    <string name="sender_id">1065290004978</string>
    <string name="google_appId">1065290004978</string>
    <string name="map_key">AIzaSyBC_Ff-gjCriYGBVzZ6BMpJzTO1Hk7uMaY</string>
    <string name="txt_slct_option">Seleccionar imagen</string>
    <string name="txt_gellery">Galeria</string>
    <string name="txt_cameray">Cámara</string>
    <string name="txt_warning">(Deshabilitado para evitar el vandalismo)</string>
    <string name="txt_img_error">No es posible seleccionar la imagen!</string>
    <string name="txt_current_location">Configurar ubicación de origen</string>
    <string name="txt_symbol_dot">\u25CF</string>
    <string name="txt_symbol_square">\u25A0</string>
    <string name="txt_dest_hint">Seleccione su destino</string>
    <string name="txt_req_cab">Solicitud de taxi</string>
    <string name="panicClic">Estas en peligro? Manten presionado el botón por 3 segundos y te ayudaremos!</string>
    <string name="txt_success_forgot_password">¡Contraseña enviada con éxito al correo registrado! </string>
    <string name="txt_approx_fare">Tarifa aproximada</string>
    <string name="txt_cost_dis_fare">Costo / km </string>
    <string name="txt_tot_dis">Dis. Aproximada</string>
    <string name="txt_cost_min_fare">Costo / Min </string>
    <string name="txt_btn_done">Hecho</string>
    <string name="txt_fare_note">Mantenga presionado el ícono del automóvil para obtener la tarifa aproximada!</string>
    <string name="txt_pickup_address">Dirección del Cliente</string>
    <string name="txt_drop_address">Dirección de Final</string>
    <string name="txt_sub_rating">Enviar</string>
    <string name="txt_cancel">Cancelar</string>
    <string name="et_promocode">Ingresar código promocional</string>
    <string name="btn_apply_promo">Aplicar promoción</string>
    <string name="tv_promocode_note">Si tienes un código promocional, ingrésalo y ahorra en tu viaje.</string>
    <string name="help_line">En caso de emergencia</string>
    <string name="txt_refferal_link">Compartir tu código de referido</string>
    <string name="text_job_accepted">CONDUCTOR ACEPTÓ LA SOLICITUD</string>
    <string name="text_driver_started">CONDUCTOR ESTA EN CAMINO</string>
    <string name="text_driver_arrvied">CONDUCTOR HA LLEGADO AL LUGAR</string>
    <string name="text_trip_started"> TU VIAJE HA EMPEZADO</string>
    <string name="text_trip_completed">TU VIAJE ESTA COMPLETO</string>
    <string name="btn_later"><u>No,es para una fecha posterior</u></string>
    <string name="txt_gps_off">GPS esta apagado!</string>
    <string name="txt_gps_msg">Por favor encienda el GPS</string>
    <string name="txt_enable">Habilitar</string>
    <string name="txt_exit">SAlir</string>
    <string name="history_title">Historial de viajes</string>
    <string name="later_title">Tus viajes programados</string>
    <string name="select_payment_title">Seleccionar pagos</string>
    <string name="add_payment_title">Añadir opciones de pago</string>
    <string name="txt_select_payment"><u>Toque para cambiar la opción de pago.</u></string>
    <string name="txt_note_choose">Esta caracteristica esta <b>Disabled</b> in <b>DEMO</b>, to avoid Vandalism of the Demo</string>
    <string name="not_available">-- No disponible --</string>
    <string name="car_type">Tipo de auto</string>
    <string name="reciept">Recibo</string>
    <string name="your_ride_with">tu viaje con</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="select_language">Lenguaje</string>
    <string name="or_connect_using_a_social_account">O conectar usando una cuenta social.</string>
    <string name="base_fare">Tarifa base</string>
    <string name="min_fare">Tarifa mínima</string>
    <string name="time_cost">Costo de tiempo</string>
    <string name="distance">Distancia</string>
    <string name="duration">Duración</string>
    <string name="booking_price">Precio de reserva</string>
    <string name="service_tax">Cargos de servicio</string>
    <string name="ride_details">Detalles del viaje</string>
    <string name="logout">Cerrar sesión</string>
    <string name="contact">Contacto</string>
    <string name="cancel_ride">Cancelar viaje</string>
    <string name="completed_ride">Tu viaje se ha completado!</string>
    <string name="complete_ride">Tu viaje se ha completado!</string>
    <string name="pay_now">Pagar ahora</string>
    <string name="pay">Necesitas pagar:</string>
    <string name="payment_note">Toque el ícono naranja debajo \ para agregar nuevas opciones de pago.</string>
    <string name="payment_note1">Para fines de demostración, use los siguientes datos de la tarjeta</string>
    <string name="payment_note2">Card Number: 4242 4242 4242 4242\n Expiration: 12/20</string>
    <string name="no_history">--- No hay viajes en su cuenta ---</string>
    <string name="no_places">--- No hay lugares guardados ---</string>
    <string name="airport_title">Reserva de viaje al aeropuerto</string>
    <string name="login_Password5">Prefijo del Pais:</string>
   <string name="generar">Validar tu Celular</string>
    <string name="imprimir">Validar Código</string>
    <string name="txt_referral_code1">Ingrese su Cédula</string>
    <string name="login_Password2">Genera Código:</string>
    <string name="login_Password3">Ingrese su Celular:</string>
    <string name="txt_referral_code">Código de referido</string>
    <string name="lets_get_started">Empecemos!</string>
    <string name="create_an_account_in_nikola">Registrate o Reactivate</string>
</resources>